adjusted method for obtaining values of selected radio buttons

--- a/index.html
+++ b/index.html
@@ -20,14 +20,91 @@
 
 <body>
 
-
 <!-- Create container wrapper and insert background image -->
 <div class="container background" style="padding-top:30px;">
 
+
     <!-- Game header -->
+
     <div id="header">
-        <p id="header">Trivia Quiz</p>
+        <img src="assets/images/rafiki-simba.jpg" id="left">
+        <img src="assets/images/simba-nala.jpg" id="right">
+        <h1>Trivia Quiz</h1>
     </div>
+
+    <div class="timer-section">
+        <h5>Seconds remaining</h5>
+        <h3 id="time-remaining">30</h3>
+    </div>
+
+    <!-- first question -->
+    <div class="card" style="width: 40rem;">
+        <div class="card-body">
+            <h5 class="card-title">Who was the voice of Sarabi in the Lion King 1994?</h5>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio1" value="Michelle Obama">
+                <label class="form-check-label" for="inlineRadio1">Michelle Obama</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio2" value="Michelle Obama">
+                <label class="form-check-label" for="inlineRadio2">Willow Smith</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio3" value="Michelle Obama">
+                <label class="form-check-label" for="inlineRadio3">Alfre Woodard</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio4" value="Michelle Obama">
+                <label class="form-check-label" for="inlineRadio4">Gemma Collins</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- second question -->
+    <div class="card" style="width: 40rem;">
+        <div class="card-body">
+            <h5 class="card-title">Who was the voice of Rafiki in Lion King 2019?</h5>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio5" value="John Kani">
+                <label class="form-check-label" for="inlineRadio5">Rowan Atkinson</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio6" value="John Kani">
+                <label class="form-check-label" for="inlineRadio6">John Kani</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio7" value="John Kani">
+                <label class="form-check-label" for="inlineRadio7">Robert Guillaume</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio8" value="John Kani">
+                <label class="form-check-label" for="inlineRadio8">Ernie Sabella</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- third question -->
+        <div class="card" style="width: 40rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Who was the voice of Timon in Lion King 1994?</h5>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio9" value="Nathan Lane">
+                        <label class="form-check-label" for="inlineRadio9">John Oliver</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio10" value="Nathan Lane">
+                        <label class="form-check-label" for="inlineRadio10">Cheech Marin</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio11" value="Nathan Lane">
+                        <label class="form-check-label" for="inlineRadio11">Nathan Lane</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio12" value="Nathan Lane">
+                        <label class="form-check-label" for="inlineRadio12">Jim Cummings</label>
+                    </div>
+                </div>
+            </div>
 
 </div>
 
