added safari grassland image at the bottom

--- a/index.html
+++ b/index.html
@@ -84,29 +84,34 @@
     </div>
 
     <!-- third question -->
-        <div class="card" style="width: 40rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Who was the voice of Timon in Lion King 1994?</h5>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio9" value="Nathan Lane">
-                        <label class="form-check-label" for="inlineRadio9">John Oliver</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio10" value="Nathan Lane">
-                        <label class="form-check-label" for="inlineRadio10">Cheech Marin</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio11" value="Nathan Lane">
-                        <label class="form-check-label" for="inlineRadio11">Nathan Lane</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio12" value="Nathan Lane">
-                        <label class="form-check-label" for="inlineRadio12">Jim Cummings</label>
-                    </div>
-                </div>
+    <div class="card" style="width: 40rem;">
+        <div class="card-body">
+            <h5 class="card-title">Who was the voice of Timon in Lion King 1994?</h5>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio9" value="Nathan Lane">
+                <label class="form-check-label" for="inlineRadio9">John Oliver</label>
             </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio10" value="Nathan Lane">
+                <label class="form-check-label" for="inlineRadio10">Cheech Marin</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio11" value="Nathan Lane">
+                <label class="form-check-label" for="inlineRadio11">Nathan Lane</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio12" value="Nathan Lane">
+                <label class="form-check-label" for="inlineRadio12">Jim Cummings</label>
+            </div>
+        </div>
+    </div>
 
+    <div id="grassland-image">
+        <img src="assets/images/african-plain-trim.jpg">
+    </div>
 </div>
+
+
 
 
 
