modified the results message

--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
 <!-- Create container wrapper and insert background image -->
 <div class="container background" style="padding-top:30px;">
 
-
     <!-- Game header -->
-
     <div id="header">
         <img src="assets/images/rafiki-simba.jpg" id="left">
         <img src="assets/images/simba-nala.jpg" id="right">
         <h1>Trivia Quiz</h1>
     </div>
 
+    <!-- Timer section -->
     <div class="timer-section">
         <h5>Seconds remaining</h5>
         <h3 id="time-remaining">30</h3>
     </div>
+
+    <!-- Result section -->
+    <div class="results-section"></div> 
 
     <!-- first question -->
     <div class="card" style="width: 40rem;">
